# Teditor-git

./: Makefile  PKGBUILD  README.md  Teditor.desktop  pyproject.toml  tedit.install  teditor
src/TED-0.0.1/: pyproject.toml
src/TED-0.0.1/src/teditor/: __init__.py
src/teditor/: __init__.py  ted.py
