[build-system]
requires = ["hatchling", "customtkinter"]
build-backend = "hatchling.build"

[project]
name = "teditor"
version = "0.0.1"
authors = [
  { name = "Luka Kobakhidze", email = "Luka287@proton.me" },
]
description = "A simple and minimal text editoe"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/Luka287/TED"
"Bug Tracker" = "https://github.com/Luka287/TED/issues"
